[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibekit-escrow-template"
version = "0.1.0"
description = "Escrow strategy template for Vibekit agents"
authors = [
  { name = "Nelson Jing" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]